# econometrics-tools-wagner

./: .gitignore  README.md  econometrics_tools_wagner.py  prueba.ipynb  pyproject.toml
econometrics_tools_wagner/: __init__.py
