[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "econometrics_tools_wagner"
version = "0.1.0"
description = "Personal econometrics and ML utilities by Wagner"
authors = [
    {name = "Wagner Moreno"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "statsmodels",
    "scikit-learn"
]

[tool.setuptools]
py-modules = ["econometrics_tools_wagner"]